Network Policy/cross-ns.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: apache-def-np
spec:
 podSelector:
  matchLabels: {}
 policyTypes:
 - Ingress
 ingress:
 - from:
   - namespaceSelector:
      matchLabels:
       kubernetes.io/metadata.name: apache
