Network Policy/denypol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: deny-pol
spec:
 podSelector:
  matchLabels: {}
 policyTypes:
 - Ingress
