Network Policy/namespacepol1.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: ns-policy
spec:
 podSelector:
  matchLabels: {}
 policyTypes:
 - Ingress
 ingress:
 - from:
   - namespaceSelector:
      matchLabels:
       kubernetes.io/metadata.name: default
